<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShareInSecret</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dropbox_comms">DropboxComms</string>
    <string name="ok">OK</string>
    <string name="unlink">Unlink</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="link_to_dropbox">Link to Dropbox</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="title_activity_file_chooser">FileChooserActivity</string>
    <string name="open_encrypted_file">Open Encrypted File</string>
    <string name="unlink_from_dropbox">Unlink from Dropbox account</string>
    <string name="create_new_document">Create New Document</string>
    <string name="enter_filename">Enter filename for save (including extension)</string>
    <string name="encrypt_save">Encrypt and Save</string>
    <string name="title_activity_import_group">AddGroupActivity</string>
    <string name="list_groups">List Groups</string>
    <string name="import_group">Import new group</string>
    <string name="title_activity_encrypt">EncryptActivity</string>
    <string name="title_activity_my_main">MyMainActivity</string>
    <string name="encrypt_existing">Encrypt Existing File</string>

</resources>
